add section for slides for NY, Chicago and LA

--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
   <a href="#tour" class="w3-button w3-bar-item">Tour</a>
   <a href="#contact" class="w3-button w3-bar-item">Contact</a>
 </nav>
+<section>
+  <img class="mySlides" src="img_band_la.jpg" style="width:100%">
+  <img class="mySlides" src="img_band_ny.jpg" style="width:100%">
+  <img class="mySlides" src="img_band_chicago.jpg" style="width:100%">
+</section>
 </body>
 </html>
