add logic for slides to appear every three seconds

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
   <img class="mySlides" src="img_band_ny.jpg" style="width:100%">
   <img class="mySlides" src="img_band_chicago.jpg" style="width:100%">
 </section>
+<script type="javascript/javascript.js"></script>
 </body>
 </html>
