--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
+  <script type="javascript/javascript.js"></script>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Dynamic Website</title>
 </head>
@@ -19,6 +20,10 @@
   <img class="mySlides" src="img_band_ny.jpg" style="width:100%">
   <img class="mySlides" src="img_band_chicago.jpg" style="width:100%">
 </section>
-<script type="javascript/javascript.js"></script>
+<section class="w3-container w3-center w3-content" style="max-width:600px">
+    <h2 class="w3-wide">THE BAND</h2>
+    <p class="w3-capacity"><i>We Love Music</i></p>
+</section>
+
 </body>
 </html>
