debugged and correct syntax error to logic

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ carousel();
 
 function carousel() {
   var i;
-  var x = document.getElementByClassName("mySlides");
+  var x = document.getElementsByClassName("mySlides");
   for(i = 0; i < x.length; i++) {
     x[i].style.display = "none";
 }
